--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.marcolarotonda</groupId>
+			<artifactId>dnd5e</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.discord-jda</groupId>
+			<artifactId>JDA</artifactId>
+			<version>v5.0.0-beta.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -36,5 +48,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+
+		<repository>
+			<id>repsy</id>
+			<name>repsy-dnd5e</name>
+			<url>https://repo.repsy.io/mvn/marcolarotonda/dnd5e</url>
+		</repository>
+	</repositories>
 
 </project>
