--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>io.github.marcolarotonda</groupId>
 			<artifactId>dnd5e</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1.feat-tag-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
