--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<groupId>com.github.discord-jda</groupId>
 			<artifactId>JDA</artifactId>
 			<version>v5.0.0-beta.22</version>
+			<exclusions>
+				<exclusion>
+					<groupId>club.minnced</groupId>
+					<artifactId>opus-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
